# BCGunet

./: .gitignore  bcgunet_ana.ipynb  bcgunet_note.ipynb  bcgunet_outside.ipynb  bcgunet_run.ipynb  pyproject.toml  requirements.txt
bcgunet/: unet.py
